# phantom

./: .gitignore  LAB.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  analysis_options.yaml  phantom-release.b64  pubspec.yaml  signing-cert.pem  signing-key.pem  test_dr.dart
.github/workflows/: release.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: core_provider.dart  main.dart  phantom_messenger.dart
lib/core/: device_wallpaper_service.dart  groups.dart  i2pd_daemon.dart  ipfs_daemon.dart  link_preview_service.dart  media_chunking.dart  notification_service.dart  phantom_core.dart  presence_service.dart  reliable_i2p.dart  secret_chat.dart  transport_debugger.dart  update_service.dart  waku_daemon.dart  yggdrasil_daemon.dart  yggdrasil_peers.dart
lib/core/crypto/: double_ratchet.dart  hybrid_kem.dart  safety_number.dart  x3dh.dart
lib/core/crypto/native/: phantom_crypto_native.dart
lib/core/identity/: identity.dart
lib/core/protocol/: frame.dart  message.dart
lib/core/storage/: backup_manager.dart  phantom_storage.dart
lib/transport/: transport.dart  transport_manager_v2.dart
lib/transport/bluetooth/: bluetooth_mesh_transport.dart  contact_hint_registry.dart  gatt_server_channel.dart  mesh_protocol.dart  mesh_router.dart  message_store.dart
lib/transport/yggdrasil/: ygg_ip6.dart  ygg_packet_channel.dart
lib/ui/screens/: _extras.dart  add_contact_screen.dart  chat_screen.dart  contacts_screen.dart  conversations_screen.dart  onboarding_screen.dart  screens.dart  settings_screen.dart  transport_debug_screen.dart  verify_contact_screen.dart
lib/ui/theme/: phantom_theme.dart
lib/ui/widgets/: widgets.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
local_packages/post_quantum/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
local_packages/post_quantum/example/: dilithium_example.dart  kyber_example.dart  kyber_pke_example.dart  kyber_pke_steps_example.dart  kyber_steps_example.dart
local_packages/post_quantum/lib/: kyber.dart  post_quantum.dart
local_packages/post_quantum/lib/src/: dilithium.dart  kyber.dart  kyber_pke.dart  utilities.dart
local_packages/post_quantum/lib/src/algorithms/dilithium/: dilithium.dart
local_packages/post_quantum/lib/src/algorithms/kyber/: kyber.dart
local_packages/post_quantum/test/: dilithium_test.dart  kyber_pke_test.dart  kyber_test.dart
local_packages/post_quantum/test/test_data/dilithium/: pregenerated_d2.json  pregenerated_d3.json  pregenerated_d5.json
local_packages/post_quantum/test/test_data/kyber/: pregenerated_k1024.json  pregenerated_k512.json  pregenerated_k768.json
local_packages/post_quantum/test/test_data/kyber_pke/: pregenerated_pke1024.json  pregenerated_pke512.json  pregenerated_pke768.json
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: README.md
rust/phantom_crypto/: Cargo.toml
rust/phantom_crypto/src/: ffi.rs  kyber.rs  kyber_test_vectors.rs  lib.rs  ratchet.rs
scripts/: build_waku_mobile.sh  build_yggdrasil_mobile.sh  download_i2pd.sh  download_kubo.sh
test/: bluetooth_mesh_test.dart  double_ratchet_test.dart  groups_test.dart  high_privacy_mode_test.dart  media_chunking_test.dart  media_wire_format_test.dart  message_store_delivered_test.dart  native_ratchet_cutover_test.dart  phantom_core_test.dart  reliable_i2p_test.dart  secret_chat_test.dart  waku_store_recovery_test.dart  widget_test.dart  x3dh_kyber_test.dart  ygg_ip6_test.dart  ygg_peers_sanitize_test.dart  ygg_transport_test.dart
test/e2e/: handshake_loopback_test.dart
test/lab/: waku_live_test.dart
test/mesh/: contact_hint_registry_test.dart  mesh_fragment_test.dart  mesh_routing_test.dart
test/support/: loopback_transport.dart  mesh_sim.dart
tool/: gen_crypto_vectors.dart  gen_kyber_vectors.dart  gen_ratchet_vector.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+33 files in other folders)
