[package]
name = "phantom_crypto"
version = "0.1.0"
edition = "2021"
description = "Memory-safe crypto core for Phantom — vetted primitives with secret zeroization, byte-for-byte parity with the Dart implementation it replaces."
license = "MIT"

[lib]
# rlib for `cargo test`; cdylib for the Android/Linux .so and staticlib for
# the iOS xcframework — the crate now builds as a native library the Flutter
# app can link (see src/ffi.rs and rust/README.md).
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Vetted, audited primitives (the same families libsignal uses).
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
# Memory hygiene: wipe secrets from RAM deterministically (the gap Dart's GC
# can't close), and constant-time comparison to avoid timing side channels.
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
# Session (de)serialization parity with the Dart JSON, and CSPRNG for nonces /
# new ratchet DH keys.
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
# mlock/munlock the live ratchet session so its secret pages can't be swapped to
# disk (Unix/Android). Best-effort; failure is non-fatal.
libc = "0.2"
# Kyber-768 **round 3** (the `kyber` feature) — formally verified (hax/F*),
# the same implementation libsignal uses for PQXDH. NOT the FIPS-203 ML-KEM
# variant: Phantom's wire format is round-3 (Dart `post_quantum`), and the two
# don't cross-decapsulate. Slimmed features: no rand (we pass randomness
# explicitly), no codec/wasm extras.
libcrux-ml-kem = { version = "0.0.9", default-features = false, features = [
    "mlkem768",
    "kyber",
    "std",
] }

[profile.release]
# Keep debug asserts off but do not let the optimizer elide zeroization —
# `zeroize` uses volatile writes + fences so this is safe.
opt-level = 3
